app/styles/custom.css
/* @import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&display=swap"); */

@import url("https://static.parastorage.com/services/santa-resources/resources/viewer/user-site-fonts/fonts/Avenir_Family_Pack/v1/AvenirLTW05-85Heavy.woff2");

/* avenir-lt-w01_85-heavy1475544,avenir-lt-w05_85-heavy,sans-serif */

.no-margin * {
  margin: unset;
}

.streamlit-like-btn,
.streamlit-like-btn:visited,
.streamlit-like-btn:hover,
.streamlit-like-btn:active {
  cursor: pointer;
  font-family: avenir-lt-w01_85-heavy1475544,avenir-lt-w05_85-heavy,"Space Grotesk", sans-serif;
  font-size: 15px;
  text-decoration: none !important;
  color: white !important;
  display: inline-flex;
  -webkit-box-align: center;
  align-items: center;
  -webkit-box-pack: center;
  justify-content: center;
  font-weight: 400;
  padding: 0.25rem 0.75rem;
  border-radius: 0.25rem;
  margin: 0px;
  line-height: 1.6;
  width: auto;
  user-select: none;
  background-color: rgb(8, 8, 8);
  border: 1px solid rgba(255, 255, 255, 0.2);
}

.btn.btn-theme.replicate-nav {
  border-radius: 32px;
  background: white;
  color: black;
  border: 1px solid #e5e5e5;
  margin-right: 0.5em;
}

.btn.btn-theme.replicate-nav.active {
  background: black;
  color: white;
  border: 1px solid black;
}

.btn.btn-theme.replicate-nav:hover {
  background: #fff0f5;
}

.btn.btn-theme.replicate-nav.active:hover {
  background:  #a5ffee; /* mint */;
  color: black;
  border: 1px solid transparent;
}

.btn.btn-theme.btn-link {
  color: inherit;
  background: none;
  border: 0;
  padding: 0;
  text-decoration: underline;
  text-decoration-color: rgba(0, 0, 0, 0.45);
  text-decoration-thickness: 0.6px;
  text-underline-offset: 0.15em;
}

.btn.btn-theme.btn-link:hover {
  border: 0;
  padding: 0;
  color: inherit;
  text-decoration: underline;
  text-decoration-color: black;
  text-decoration-thickness: 2px;
  background-color: transparent;
}

.btn.btn-theme.btn-link:active {
  outline: none;
}

.gooey-spinner {
  scroll-margin: 20px;
  display: inline-block;
  border: 4px solid rgba(255, 255, 255, 0.2);
  border-top: 4px solid #03dac5;
  border-radius: 50%;
  width: 35px;
  height: 35px;
  animation: spin 1s linear infinite;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

.gooey-spinner-text {
  padding-left: 8px;
  padding-top: 2px;
  vertical-align: top;
  display: inline-block;
  font-size: 1.1rem;
}

html {
  position: relative;
  height: 100%;
  scroll-behavior: smooth;
}

@font-face {
  font-family: avenir-lt-w05_85-heavy;
  src: url("https://static.parastorage.com/services/santa-resources/resources/viewer/user-site-fonts/fonts/Avenir_Family_Pack/v1/AvenirLTW05-85Heavy.woff2");
}

@font-face {
  font-family: basiercircle;
  src: url("basiercircle-regular.otf");
}

@font-face {
  font-family: basiercircle-medium;
  src: url("basiercircle-medium.otf");
}

body {
  font-family: "basiercircle", sans-serif;
  overflow-x: hidden;
  padding: 0px;
  margin: 0px;
  background-color: #ffff;
  overflow-x: hidden;
  font-size: 16px;
  color: #000;
}

.semibold {
  font-weight: 600;
}

.bold {
  font-weight: 700;
}

.nav a,
.nav a:hover {
  color: inherit;
  text-decoration: none;
}

a {
  color: inherit;
  text-decoration: underline;
  text-decoration-color: rgba(0, 0, 0, 0.45);
  text-decoration-thickness: 0.6px;
  text-underline-offset: 0.15em;
}

a:hover {
  color: inherit;
  text-decoration-color: black;
  text-decoration-thickness: 2px;
}

h1, h2, h3, h4, h5, h6, .table > thead > tr > th, strong, .bold, .semibold {
    font-family: avenir-lt-w01_85-heavy1475544,avenir-lt-w05_85-heavy,"avenir-lt-w05_85-heavy","Space Grotesk", sans-serif;
}
h1 {
  font-size: 32px;
  line-height: 40px;
  margin-top: 20px;
  margin-bottom: 20px;
  font-weight: 400;
}

@media (min-width: 768px) {
  h1 {
    font-size: 40px;
    line-height: 44px;
  }
}

h2 {
  font-size: 32px;
  line-height: 40px;
  margin-top: 20px;
  margin-bottom: 20px;
  font-weight: 400;
}

@media (min-width: 768px) {
  h2 {
    font-size: 40px;
    line-height: 44px;
  }
}

h3 {
  font-size: 32px;
  line-height: 40px;

  font-weight: 400;
}

h4 {
  font-size: 24px;
  line-height: 35px;

  font-weight: 400;
}

h5 {
  font-size: 1rem;
  line-height: 24px;
  font-weight: 400;
}

h3,
h5 {
  color: #000000;
  word-wrap: break-word;
  display: inline-block;
  letter-spacing: 1px;
}

h6 {
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
}

.sec-pad {
  padding: 2rem 0;
}

/* header */
.header {
  background: #fff 0% 0% no-repeat padding-box;

  z-index: 9;
  width: 100%;
  transition: all 0.2s ease-in-out;
}

/*.header:hover{
    box-shadow:  0px 3px 6px #00000029;
}*/
.sticky-bar {
  background: #fff;
}

.bg-trasnparent {
  background-color: transparent;
}

.nav-link {
  /*display: block;*/
  /*padding: 12px !important;*/
  color: #00000073;
  text-decoration: none;
  transition:
    color 0.15s ease-in-out,
    background-color 0.15s ease-in-out,
    border-color 0.15s ease-in-out;
}

.navbar-nav .nav-link {
  padding-right: 1rem;
  padding-left: 1rem;
}

.contact-icon img {
  transition: all 0.2s ease-in-out;
}

.contact-icon img:hover {
  opacity: 0.7;
}

.logo {
  width: 145px;
}

#navbar-hamburger.show {
  display: block;
}

#navbar-hamburger,
#navbar-close {
  display: none;
}

#navbar-close.show {
  display: block;
}

.navbar-toggler:focus {
  text-decoration: none;
  outline: 0;
  box-shadow: 0 0 0 0rem;
}

.nav-item .nav-link.active {
  color: #000;
}

.nav-link:focus,
.nav-link:hover {
  color: #000;
}

@media all and (min-width: 992px) {
  .navbar .nav-item .dropdown-menu {
    display: none;
  }

  .navbar .nav-item:hover .nav-link {
  }

  .navbar .nav-item:hover .dropdown-menu {
    display: block;
  }

  .navbar .nav-item .dropdown-menu {
    margin-top: 0;
  }
}
/* ... */

